Avoid forbidden api calls