@@ -591,9 +591,11 @@ public class LoggingAuditTrailTests extends ESTestCase {
         createApiKeyRequest.setRefreshPolicy(randomFrom(WriteRequest.RefreshPolicy.values()));
         createApiKeyRequest.setMetadata(metadataWithSerialization.metadata());
         auditTrail.accessGranted(requestId, authentication, CreateApiKeyAction.NAME, createApiKeyRequest, authorizationInfo);
-        String expectedCreateKeyAuditEventString = """
-            "create":{"apikey":{"id":"%s","name":"%s","expiration":%s,%s%s}}\
-            """.formatted(
+        String expectedCreateKeyAuditEventString = String.format(
+            Locale.ROOT,
+            """
+                "create":{"apikey":{"id":"%s","name":"%s","expiration":%s,%s%s}}\
+                """,
             createApiKeyRequest.getId(),
             keyName,
             expiration != null ? "\"" + expiration + "\"" : "null",
@@ -625,12 +627,16 @@ public class LoggingAuditTrailTests extends ESTestCase {
             metadataWithSerialization.metadata()
         );
         auditTrail.accessGranted(requestId, authentication, UpdateApiKeyAction.NAME, updateApiKeyRequest, authorizationInfo);
-        final var expectedUpdateKeyAuditEventString = """
-            "change":{"apikey":{"id":"%s"%s%s}}\
-            """.formatted(
+        final var expectedUpdateKeyAuditEventString = String.format(
+            Locale.ROOT,
+            """
+                "change":{"apikey":{"id":"%s"%s%s}}\
+                """,
             keyId,
             updateApiKeyRequest.getRoleDescriptors() == null ? "" : "," + roleDescriptorsStringBuilder,
-            updateApiKeyRequest.getMetadata() == null ? "" : String.format(Locale.ROOT, ",\"metadata\":%s", metadataWithSerialization.serialization())
+            updateApiKeyRequest.getMetadata() == null
+                ? ""
+                : String.format(Locale.ROOT, ",\"metadata\":%s", metadataWithSerialization.serialization())
         );
         output = CapturingLogger.output(logger.getName(), Level.INFO);
         assertThat(output.size(), is(2));
@@ -655,12 +661,16 @@ public class LoggingAuditTrailTests extends ESTestCase {
             metadataWithSerialization.metadata()
         );
         auditTrail.accessGranted(requestId, authentication, BulkUpdateApiKeyAction.NAME, bulkUpdateApiKeyRequest, authorizationInfo);
-        final var expectedBulkUpdateKeyAuditEventString = """
-            "change":{"apikeys":{"ids":[%s]%s%s}}\
-            """.formatted(
-            bulkUpdateApiKeyRequest.getIds().stream().map("\"%s\""::formatted).collect(Collectors.joining(",")),
+        final var expectedBulkUpdateKeyAuditEventString = String.format(
+            Locale.ROOT,
+            """
+                "change":{"apikeys":{"ids":[%s]%s%s}}\
+                """,
+            bulkUpdateApiKeyRequest.getIds().stream().map(s -> String.format(Locale.ROOT, "\"%s\"", s)).collect(Collectors.joining(",")),
             bulkUpdateApiKeyRequest.getRoleDescriptors() == null ? "" : "," + roleDescriptorsStringBuilder,
-            bulkUpdateApiKeyRequest.getMetadata() == null ? "" : String.format(Locale.ROOT, ",\"metadata\":%s", metadataWithSerialization.serialization())
+            bulkUpdateApiKeyRequest.getMetadata() == null
+                ? ""
+                : String.format(Locale.ROOT, ",\"metadata\":%s", metadataWithSerialization.serialization())
         );
         output = CapturingLogger.output(logger.getName(), Level.INFO);
         assertThat(output.size(), is(2));
@@ -753,9 +763,9 @@ public class LoggingAuditTrailTests extends ESTestCase {
         output = CapturingLogger.output(logger.getName(), Level.INFO);
         assertThat(output.size(), is(2));
         String generatedPutRoleAuditEventString = output.get(1);
-        String expectedPutRoleAuditEventString = """
+        String expectedPutRoleAuditEventString = String.format(Locale.ROOT, """
             "put":{"role":{"name":"%s","role_descriptor":%s}}\
-            """.formatted(putRoleRequest.name(), auditedRolesMap.get(putRoleRequest.name()));
+            """, putRoleRequest.name(), auditedRolesMap.get(putRoleRequest.name()));
         assertThat(generatedPutRoleAuditEventString, containsString(expectedPutRoleAuditEventString));
         generatedPutRoleAuditEventString = generatedPutRoleAuditEventString.replace(", " + expectedPutRoleAuditEventString, "");
         checkedFields = new MapBuilder<>(commonFields);
@@ -1485,8 +1495,10 @@ public class LoggingAuditTrailTests extends ESTestCase {
         auditTrail.accessGranted(requestId, authentication, SetProfileEnabledAction.NAME, setProfileEnabledRequest, authorizationInfo);
         assertThat(output.size(), is(2));
         String generatedSetEnabledAuditEventString = output.get(1);
-        final String expectedSetEnabledAuditEventString = """
-            "change":{"%s":{"uid":"%s"}}""".formatted(
+        final String expectedSetEnabledAuditEventString = String.format(
+            Locale.ROOT,
+            """
+                "change":{"%s":{"uid":"%s"}}""",
             setProfileEnabledRequest.isEnabled() ? "enable" : "disable",
             setProfileEnabledRequest.getUid()
         );
