@@ -17,6 +17,7 @@ import org.elasticsearch.xpack.core.security.authz.AuthorizationEngine.Authoriza
 import org.elasticsearch.xpack.core.security.user.User;
 
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -53,7 +54,13 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
 
         assertThat(
             rolesDescription,
-            equalTo(String.format(java.util.Locale.ROOT, " with assigned roles [%s]", Strings.collectionToCommaDelimitedString(assignedRoleNames)))
+            equalTo(
+                String.format(
+                    java.util.Locale.ROOT,
+                    " with assigned roles [%s]",
+                    Strings.collectionToCommaDelimitedString(assignedRoleNames)
+                )
+            )
         );
     }
 
@@ -73,7 +80,13 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
 
         assertThat(
             rolesDescription,
-            equalTo(String.format(java.util.Locale.ROOT, " with assigned roles [%s]", Strings.collectionToCommaDelimitedString(assignedRoleNames)))
+            equalTo(
+                String.format(
+                    java.util.Locale.ROOT,
+                    " with assigned roles [%s]",
+                    Strings.collectionToCommaDelimitedString(assignedRoleNames)
+                )
+            )
         );
     }
 
@@ -104,7 +117,13 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
 
         assertThat(
             rolesDescription,
-            equalTo(String.format(java.util.Locale.ROOT, " with assigned roles [%s]", Strings.collectionToCommaDelimitedString(assignedRoleNames)))
+            equalTo(
+                String.format(
+                    java.util.Locale.ROOT,
+                    " with assigned roles [%s]",
+                    Strings.collectionToCommaDelimitedString(assignedRoleNames)
+                )
+            )
         );
     }
 
@@ -129,7 +148,11 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
             assertThat(
                 rolesDescription,
                 equalTo(
-                    String.format(java.util.Locale.ROOT, " with effective roles [] (assigned roles [%s] were not found)", Strings.collectionToCommaDelimitedString(assignedRoleNames.stream().sorted().toList()))
+                    String.format(
+                        java.util.Locale.ROOT,
+                        " with effective roles [] (assigned roles [%s] were not found)",
+                        Strings.collectionToCommaDelimitedString(assignedRoleNames.stream().sorted().toList())
+                    )
                 )
             );
         }
@@ -160,7 +183,11 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
         assertThat(
             rolesDescription,
             equalTo(
-                String.format(java.util.Locale.ROOT, " with effective roles [%s]", Strings.collectionToCommaDelimitedString(effectiveRoleNames.stream().sorted().toList()))
+                String.format(
+                    java.util.Locale.ROOT,
+                    " with effective roles [%s]",
+                    Strings.collectionToCommaDelimitedString(effectiveRoleNames.stream().sorted().toList())
+                )
             )
         );
     }
@@ -192,7 +219,9 @@ public class AuthorizationDenialMessagesTests extends ESTestCase {
         assertThat(
             rolesDescription,
             equalTo(
-                " with effective roles [%s] (assigned roles [%s] were not found)".formatted(
+                String.format(
+                    Locale.ROOT,
+                    " with effective roles [%s] (assigned roles [%s] were not found)",
                     Strings.collectionToCommaDelimitedString(effectiveRoleNames.stream().sorted().toList()),
                     Strings.collectionToCommaDelimitedString(unfoundedRoleNames.stream().sorted().toList())
                 )
